Change poll answers and answer choices to use integers as letter identifiers
