# src/routers/v2/Polls/GetPollRouter.js
@@ -7,7 +7,6 @@ import LogUtils from '../../../utils/LogUtils';
 import PollsRepo from '../../../repos/PollsRepo';
 
 import type { APIPoll } from '../APITypes';
-import type { PollChoice } from '../../../utils/Constants';
 
 class GetPollRouter extends AppDevRouter<APIPoll> {
   constructor() {
@@ -36,7 +35,7 @@ class GetPollRouter extends AppDevRouter<APIPoll> {
     }
 
     const userAnswer = poll.answers[req.user.googleID];
-    const answerObject: { string: PollChoice[]} = {};
+    const answerObject: { string: number[]} = {};
     answerObject[req.user.googleID] = userAnswer || [];
 
     return {
